[package]
name = "tyler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.72.1"
aws-sdk-s3 = "1.82.0"
lambda_http = "0.14.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-gzip", "compression-deflate"] }
rust_decimal = { version = "1.31", features = ["serde"] }
google_maps = "3.8.2"
tracing-subscriber = "0.3.19"
aws-smithy-http = "0.62.1"
wkt = "0.13.0"
geojson = "0.24.2"
geo = "0.30.0"
futures = "0.3.31"


